# StarTopologyEmulator

./: CMakeLists.txt  README.md
Include/StarTopologyEmulator/: CommonTypedefs.h  EmulatorFactory.h  StarHubStrategyConfig.h  StarHubStrategyFactory.h  StarStationFactory.h  StarTopologyEmulatorExport.h  TerminalState.h
Include/StarTopologyEmulator/IFaces/: IEmulator.h  IMessage.h  IStarHub.h  IStarHubStrategy.h  IStarStation.h  ITerminal.h
Include/StarTopologyEmulator/Messages/: StarHubAccessMessage.h  StarHubPlanMessage.h  StarStationMessage.h
Include/StarTopologyEmulator/StateMachine/: State.h  StateMachine.h
Include/StarTopologyEmulator/StateMachine/IFaces/: IState.h  ITransition.h
Src/: Emulator.cpp  Emulator.h  EmulatorFactory.cpp  StarHubFactory.cpp  StarHubStrategyFactory.cpp  StarStationFactory.cpp
Src/AbonentStates/: JoinTransition.cpp  JoinTransition.h  OffState.cpp  OffState.h  OperationState.cpp  OperationState.h  RandomAccessState.cpp  RandomAccessState.h
Src/StateMachine/: State.cpp  StateMachine.cpp
Src/Stations/: StarHub.cpp  StarHub.h  StarStation.cpp  StarStation.h  StationContext.h
Src/Strategies/: SimpleStarHubStrategy.cpp  SimpleStarHubStrategy.h
